--- a/assignment-6/css/style.css
+++ b/assignment-6/css/style.css
@@ -68,29 +68,25 @@ img#triangles {
   height: 65%;
   width: 55%;
 }
-.align-left {
+.align-left-bottom {
   position: absolute;
-  bottom: 10;
+  bottom: 10px;
   left: 10px;
 }
-.align-right {
-  position: absolute;
-  bottom: 10;
-  right: 10px;
-}
+
 .align-right-bottom {
   position: absolute;
-  bottom: 10;
+  bottom: 10px;
   right: 10px;
 }
 .align-right-top {
   position: absolute;
-  top: 10;
+  top: 10px;
   right: 10px;
 }
 .align-left-top {
   position: absolute;
-  top: 10;
+  top: 10px;
   left: 10px;
 }
 
